@@ -1,3 +1,7 @@
+2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>
+
+	* library/menu.tcl: additional fix for [Bug 1023955]
+
 2008-09-08  Todd M. Helfter  <tmh@users.sourceforge.net>
 
 	* doc/menu.n: fix typo in docs [Bug 2098425]
